# jack-backup

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  jack.backup.1  jack.backup.c  jack.record.1  jack.record.c  jack.record.c.orig
common/: Makefile.am  failure.h  file.c  file.h  jack-client.c  jack-client.h  jack-port.c  jack-port.h  jack-ringbuffer.c  jack-ringbuffer.h  memory.c  memory.h  observe-signal.c  print.h  signal-interleave.c  signal-interleave.h  sound-file.c  sound-file.h
