
MAINTAINERCLEANFILES =	Makefile.in

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES =	failure.h \
			file.c file.h \
			jack-client.c jack-client.h \
			jack-port.c jack-port.h \
			jack-ringbuffer.c jack-ringbuffer.h \
			memory.c memory.h \
			observe-signal.c observe-signal.h \
			print.h \
			signal-interleave.c signal-interleave.h \
			sound-file.c sound-file.h
